Fix bug promotionid gets updated when data is null.

--- a/items.html
+++ b/items.html
@@ -1,11 +1,21 @@
-<table style="height: 221px; width: 386px;">
+<table>
     <tbody>
-    <tr>
-    <td style="width: 176px;"><a href="https://shopee.co.th/-1-แถม-1-Sabina-เสื้อชั้นใน-Wireless-Shape-(ไม่มีโครง)-SBK256BK-SBK256CD-สีเนื้อเข้ม-สีดำ-i.12455213.1090262385"><img src="https://cf.shopee.co.th/file/7ff987fb95da70cb276eec05c392ce5f" alt="https://cf.shopee.co.th/file/7ff987fb95da70cb276eec05c392ce5f" width="200" height="200" /></a></td>
-    <td style="width: 219px;">
-    <p>Sabina</p>
-    <p>5/19/19 12:00 PM</p>
-    </td>
-    </tr>
+        <tr>
+            <td><a
+                    href="https://shopee.co.th/-1-แถม-1-Sabina-เสื้อชั้นใน-Wireless-Shape-(ไม่มีโครง)-SBK256BK-SBK256CD-สีเนื้อเข้ม-สีดำ-i.12455213.1090262385"><img
+                        src="https://cf.shopee.co.th/file/7ff987fb95da70cb276eec05c392ce5f"
+                        alt="https://cf.shopee.co.th/file/7ff987fb95da70cb276eec05c392ce5f" width="160"
+                        height="160" /></a></td>
+            <td>
+                <p>Sabina</p>
+            </td>
+        </tr>
+        <tr>
+            <td><img src="https://cf.shopee.co.th/file/8a695d4fe45ad4e936cd250ad5c77ce3_tn" alt="" width="160"
+                    height="160" /></td>
+            <td>
+                <p>Loreal</p>
+            </td>
+        </tr>
     </tbody>
-    </table>
+</table>
